--- a/tsconfig.json
+++ b/tsconfig.json
@@ -34,6 +34,9 @@
     },
     {
       "path": "./projects/ngx-keys/tsconfig.spec.json"
+    },
+    {
+      "path": "./projects/demo/tsconfig.app.json"
     }
   ]
 }
