chore: Add MIT `LICENSE`.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,12 @@
 {
   "name": "ngx-keys",
   "version": "0.0.0",
+  "description": "A reactive Angular library for managing keyboard shortcuts with signals-based UI integration",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/mrivasperez/ngx-keys.git"
+  },
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
