--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
     "ng-packagr": "^20.2.0",
+    "prettier": "^3.6.2",
     "typescript": "~5.9.2"
   }
 }
