--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
+    "format": "./node_modules/.bin/prettier --write \"./**/*.{ts,html,scss,css,json,md}\"",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
