--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test ngx-keys --browsers=ChromeHeadless",
+    "test:ci": "ng test ngx-keys --no-watch --no-progress --browsers=ChromeHeadless"
   },
   "prettier": {
     "printWidth": 100,
